Criando MovimentacaoController, testando e ajustando detalhes finais
